# opencv_experiments

opencv_model/: CMakeLists.txt  linreg.cpp  linreg.h  model.cxx
